add build and e2e test for release 1.12 cmss branch
Signed-off-by: bobz965 <zhangbingbing2_yewu@cmss.chinamobile.com>

--- a/.github/workflows/build-kube-ovn-base-dpdk.yaml
+++ b/.github/workflows/build-kube-ovn-base-dpdk.yaml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     name: Build AMD64
     runs-on: ubuntu-22.04
@@ -35,6 +36,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     needs:
       - build-amd64
