--- a/.github/workflows/build-kube-ovn-base.yaml
+++ b/.github/workflows/build-kube-ovn-base.yaml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         branch:
         - master
+        - release-1.12-cmss
         - release-1.12
         - release-1.11
         - release-1.9
@@ -39,6 +40,7 @@ jobs:
       matrix:
         branch:
         - master
+        - release-1.12-cmss
         - release-1.12
         - release-1.11
         - release-1.9
