--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -113,6 +114,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -195,6 +197,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -254,6 +257,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -337,6 +341,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -411,6 +416,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -462,6 +468,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -515,6 +522,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -568,6 +576,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
     steps:
@@ -641,7 +650,9 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
+  
     steps:
       - uses: actions/checkout@v4
 
@@ -712,6 +723,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     steps:
       - uses: actions/checkout@v4
@@ -783,6 +795,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -833,6 +846,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -920,6 +934,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
           - release-1.11
           - release-1.9
@@ -1114,6 +1129,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     steps:
       - uses: actions/checkout@v4
@@ -1172,6 +1188,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     steps:
       - uses: actions/checkout@v4
@@ -1242,6 +1259,7 @@ jobs:
       matrix:
         branch:
           - master
+          - release-1.12-cmss
           - release-1.12
     steps:
       - uses: actions/checkout@v4
