--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -49,7 +49,7 @@ jobs:
       - uses: docker/setup-buildx-action@v3
         if: steps.check.outputs.buildx == 1
 
-      - name: Build
+      - name: Build kube-ovn-base image
         id: build
         if: steps.check.outputs.buildx == 1
         run: |
@@ -58,9 +58,6 @@ jobs:
             make base-tar-amd64
             echo build-base=1 >> "$GITHUB_OUTPUT"
           fi
-          if git diff --name-only HEAD^ HEAD | grep -q ^dist/images/Dockerfile.base-dpdk$; then
-            make base-amd64-dpdk
-          fi
 
       - name: Upload base images to artifact
         if: steps.build.outputs.build-base == 1
@@ -68,6 +65,23 @@ jobs:
         with:
           name: kube-ovn-base
           path: image-amd64.tar
+
+      - name: Build kube-ovn-base-dpdk image
+        id: build
+        if: steps.check.outputs.buildx == 1
+        run: |
+          if git diff --name-only HEAD^ HEAD | grep -q ^dist/images/Dockerfile.base-dpdk$; then
+            make base-amd64-dpdk
+            echo build-base-dpdk=1 >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Upload base-dpdk images to artifact
+        if: steps.build.outputs.build-base-dpdk == 1
+        uses: actions/upload-artifact@v3
+        with:
+          name: kube-ovn-base-dpdk
+          path: image-amd64-dpdk.tar
+
 
   build-kube-ovn:
     name: Build kube-ovn
