--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -2033,6 +2033,10 @@ spec:
                       - 253 # default
                       - 254 # main
                       - 255 # local
+                mtu:
+                  type: integer
+                  minimum: 68
+                  maximum: 65535
                 private:
                   type: boolean
                 vlan:
