add mtu config to release-1.9
Signed-off-by: changluyi <clyi@alauda.io>

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -211,6 +211,10 @@ spec:
                       - 253 # default
                       - 254 # main
                       - 255 # local
+                mtu:
+                  type: integer
+                  minimum: 68
+                  maximum: 65535
                 private:
                   type: boolean
                 vlan:
