--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -106,6 +106,16 @@ jobs:
       - build-kube-ovn-base
       - build-kube-ovn-dpdk-base
     steps:
+      - uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          android: true
+          dotnet: true
+          haskell: true
+          docker-images: false
+          large-packages: false
+          tool-cache: false
+          swap-storage: false
+
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
       - uses: actions/setup-go@v4
