ci: fix dpdk jobs (#3405)
Signed-off-by: zhangzujian <zhangzujian.7@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,10 @@ broker-info.subm
 broker-info.subm.*
 broker-info-internal.subm
 kube-ovn.tar
+kube-ovn-dpdk.tar
 vpc-nat-gateway.tar
 image-amd64.tar
+image-amd64-dpdk.tar
 image-arm64.tar
 test/**/*.test
 kube-ovn-app-sa.yaml
